add byMeCoffee and hackthebox icon

--- a/layouts/partials/post_meta.html
+++ b/layouts/partials/post_meta.html
@@ -181,7 +181,7 @@
 </span>
 {{- end }}
 {{- if and (.Param "ShowGitRevision") .GitInfo -}}
-{{- $commitURL := printf "https://gitlab.com/hmajid2301/blog/-/commit/%s" .GitInfo.Hash -}}
+{{- $commitURL := printf "https://github.com/bensalah-nabil/hugo/commit/%s" .GitInfo.Hash -}}
 <span class="meta-item">
   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
     <circle cx="12" cy="12" r="4"></circle>
